--- a/FlightSearch.ipynb
+++ b/FlightSearch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,20 +27,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'SetMaximumResultSizeResult': 0}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "baseurl = f\"http://{username}:{api_key}@flightxml.flightaware.com/json/FlightXML2/\"\n",
     "\n",
-    "addurl = f\"AirlineFlightSchedules?startDate={startEpoch}&endDate={endEpoch}&origin=KCLT&destination=KDFW&howMany=15\"\n",
+    "addurl = \"SetMaximumResultSize?max_size=100\"\n",
     "\n",
-    "fxmlurl = baseurl + addurl\n"
+    "fxmlurl = baseurl + addurl\n",
+    "\n",
+    "requests.get(fxmlurl).json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "addurl1 = f\"AirlineFlightSchedules?startDate={startEpoch}&endDate={endEpoch}&origin=KCLT&destination=KDFW&howMany=15\"\n",
+    "\n",
+    "fxmlurl1 = baseurl + addurl\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,13 +279,13 @@
     }
    ],
    "source": [
-    "response = requests.get(fxmlurl).json()\n",
+    "response = requests.get(fxmlurl1).json()\n",
     "print(json.dumps(response, indent=4, sort_keys=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -394,20 +420,20 @@
        "4                120                  8  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = response[\"AirlineFlightSchedulesResult\"]\n",
-    "df = pd.DataFrame.from_dict(data[\"data\"], orient='columns')\n",
+    "data = response[\"AirlineFlightSchedulesResult\"]['data']\n",
+    "df = pd.DataFrame.from_dict(data, orient='columns')\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +587,7 @@
        "4  Sat, 08 Sep 2018 13:00:00 +0000  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,6 +601,85 @@
     "\n",
     "    \n",
     "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['AAL846', 1536426000], ['AAL1618', 1536437400], ['AAL665', 1536431940], ['AAL1816', 1536443400], ['AAL2552', 1536421500], ['AAL813', 1536406200], ['AAL514', 1536413160], ['AAL522', 1536459540], ['AAL430', 1536401700]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "idents = []\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['actual_ident'] == \"\":\n",
+    "        if [row['ident'],row['departuretime']] not in idents:\n",
+    "            idents.append([row['ident'],row['departuretime']])\n",
+    "    else:\n",
+    "        if [row['actual_ident'],row['departuretime']] not in idents:\n",
+    "            idents.append([row['actual_ident'],row['departuretime']])\n",
+    "        \n",
+    "print(idents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1536426600\n",
+      "1536438000\n",
+      "1536432540\n",
+      "1536444000\n",
+      "1536422100\n",
+      "1536406800\n",
+      "1536413760\n",
+      "1536460140\n",
+      "1536402300\n",
+      "[{'faFlightID': 'AAL846-1536211579-airline-0204', 'ident': 'AAL846', 'aircrafttype': 'A319', 'filed_ete': '02:22:00', 'filed_time': 1536211579, 'filed_departuretime': 1536426600, 'filed_airspeed_kts': 448, 'filed_airspeed_mach': '', 'filed_altitude': 380, 'route': 'ESTRR3 IPTAY CHOPZ ATL VUZ J52 SQS YUYUN BEREE1', 'actualdeparturetime': 1536429960, 'estimatedarrivaltime': 1536437940, 'actualarrivaltime': 1536437940, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}, {'faFlightID': 'AAL1618-1536211578-airline-0371', 'ident': 'AAL1618', 'aircrafttype': 'B738', 'filed_ete': '02:23:00', 'filed_time': 1536211578, 'filed_departuretime': 1536438000, 'filed_airspeed_kts': 450, 'filed_airspeed_mach': '', 'filed_altitude': 360, 'route': 'BOBZY3 BOBZY BRAYN GQO J118 SALMS J118 MEM LIT FEWWW SEEVR4', 'actualdeparturetime': 1536439500, 'estimatedarrivaltime': 1536447360, 'actualarrivaltime': 1536447360, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}, {'faFlightID': 'AAL665-1536211579-airline-0042', 'ident': 'AAL665', 'aircrafttype': 'A321', 'filed_ete': '02:09:00', 'filed_time': 1536434131, 'filed_departuretime': 1536432540, 'filed_airspeed_kts': 462, 'filed_airspeed_mach': '', 'filed_altitude': 340, 'route': 'CLT268020 DEBIE ESTRR3 IPTAY CHOPZ ATL VUZ J52 SQS YUYUN BEREE1', 'actualdeparturetime': 1536432710, 'estimatedarrivaltime': 1536440651, 'actualarrivaltime': 1536440651, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}, {'faFlightID': 'AAL1816-1536211578-airline-0316', 'ident': 'AAL1816', 'aircrafttype': 'A321', 'filed_ete': '02:28:00', 'filed_time': 1536211578, 'filed_departuretime': 1536444000, 'filed_airspeed_kts': 453, 'filed_airspeed_mach': '', 'filed_altitude': 340, 'route': 'BOBZY3 BNA LIT MEEOW FEWWW BRDJE3', 'actualdeparturetime': 1536444292, 'estimatedarrivaltime': 1536452726, 'actualarrivaltime': 1536452726, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}, {'faFlightID': 'AAL2552-1536211578-airline-0028', 'ident': 'AAL2552', 'aircrafttype': 'B738', 'filed_ete': '02:09:00', 'filed_time': 1536424230, 'filed_departuretime': 1536422100, 'filed_airspeed_kts': 456, 'filed_airspeed_mach': '', 'filed_altitude': 360, 'route': 'ATL082030 VUZ J52 SQS YUYUN BEREE1', 'actualdeparturetime': 1536422522, 'estimatedarrivaltime': 1536430020, 'actualarrivaltime': 1536430020, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}, {'faFlightID': 'AAL813-1536211579-airline-0066', 'ident': 'AAL813', 'aircrafttype': 'A321', 'filed_ete': '02:12:00', 'filed_time': 1536211579, 'filed_departuretime': 1536406800, 'filed_airspeed_kts': 462, 'filed_airspeed_mach': '', 'filed_altitude': 340, 'route': 'ESTRR3 IPTAY CHOPZ ATL VUZ Q30 SQS YUYUN WHINY4', 'actualdeparturetime': 1536406736, 'estimatedarrivaltime': 1536414120, 'actualarrivaltime': 1536414120, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}, {'faFlightID': 'AAL514-1536211579-airline-0635', 'ident': 'AAL514', 'aircrafttype': 'A321', 'filed_ete': '02:12:00', 'filed_time': 1536211579, 'filed_departuretime': 1536413760, 'filed_airspeed_kts': 461, 'filed_airspeed_mach': '', 'filed_altitude': 340, 'route': 'ESTRR3 IPTAY CHOPZ ATL VUZ Q30 SQS YUYUN WHINY4', 'actualdeparturetime': 1536414015, 'estimatedarrivaltime': 1536421633, 'actualarrivaltime': 1536421633, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}, {'faFlightID': 'AAL522-1536211579-airline-0338', 'ident': 'AAL522', 'aircrafttype': 'A321', 'filed_ete': '02:08:00', 'filed_time': 1536460961, 'filed_departuretime': 1536460140, 'filed_airspeed_kts': 454, 'filed_airspeed_mach': '', 'filed_altitude': 360, 'route': 'ESTRR3 IPTAY CHOPZ ATL VUZ Q30 SQS YUYUN WHINY4', 'actualdeparturetime': 1536459886, 'estimatedarrivaltime': 1536467340, 'actualarrivaltime': 1536467340, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}, {'faFlightID': 'AAL430-1536211579-airline-0553', 'ident': 'AAL430', 'aircrafttype': 'A320', 'filed_ete': '02:16:00', 'filed_time': 1536211579, 'filed_departuretime': 1536402300, 'filed_airspeed_kts': 458, 'filed_airspeed_mach': '', 'filed_altitude': 360, 'route': 'BOBZY3 BNA LIT MEEOW FEWWW SEEVR4', 'actualdeparturetime': -1, 'estimatedarrivaltime': -1, 'actualarrivaltime': -1, 'diverted': '', 'origin': 'KCLT', 'destination': 'KDFW', 'originName': 'Charlotte/Douglas Intl', 'originCity': 'Charlotte, NC', 'destinationName': 'Dallas-Fort Worth Intl', 'destinationCity': 'Dallas-Fort Worth, TX'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "\n",
+    "flights = []\n",
+    "offset = 0\n",
+    "\n",
+    "\n",
+    "for ident in idents:\n",
+    "    flight_added = False\n",
+    "    addurl2 = f\"FlightInfoEx?ident={ident[0]}@{ident[1]}&howMany=1&offset={offset}\"\n",
+    "    fxmlurl2 = baseurl + addurl2\n",
+    "    #print(addurl2)\n",
+    "    idents_resp = requests.get(fxmlurl2).json()\n",
+    "    #next_offset = idents_resp['FlightInfoExResult']['next_offset']\n",
+    "    #print(next_offset)\n",
+    "    idents_resp2 = idents_resp['FlightInfoExResult']['flights']\n",
+    "    #print(idents_resp2)\n",
+    "    for ident2 in idents_resp2:\n",
+    "        print(ident2['filed_departuretime'])\n",
+    "        #if ident[1] == ident2['filed_departuretime']:\n",
+    "        flights.append(ident2)\n",
+    "            #flight_added = True\n",
+    "    \n",
+    "    #if flight_added == False:\n",
+    "    #    offset = next_offset\n",
+    "            \n",
+    "    \n",
+    "print(flights)"
    ]
   },
   {
