--- a/FlightMap.ipynb
+++ b/FlightMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
     "baseurl = f\"http://{username}:{api_key}@flightxml.flightaware.com/json/FlightXML2/\"\n",
-    "addurl = f\"DecodeFlightRoute?faFlightID=AAL745-1534829157-airline-0092\"\n",
+    "addurl = f\"DecodeFlightRoute?faFlightID=AAL846-1537334758-airline-0217\"\n",
     "\n",
     "fxmlurl = baseurl + addurl\n",
     "    \n",
@@ -32,25 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'DecodeFlightRouteResult'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-344d708edead>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#response = requests.get(fxmlurl).json()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#print(response)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDecodeFlightRouteResult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msort_keys\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'DecodeFlightRouteResult'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"error\": \"no data available\"\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "#response = requests.get(fxmlurl).json()\n",
-    "#print(response)\n",
-    "print(json.dumps(response.DecodeFlightRouteResult, indent=4, sort_keys=True))"
+    "print(json.dumps(response, indent=4, sort_keys=True))"
    ]
   },
   {
